
* 2014-05-22 - thorben.betten@open-xchange.com

 - Fix for bug 32677: Do net set SMTP credentials if not explicitly set + several sanitizing operations to ensure SMTP authentication does still work
 - Fix for bug 32692: Ignore alternative XML part

* 2014-05-21 - thorben.betten@open-xchange.com

 - Fix for bug 32226: Fixed regex used for look-up of referenced inline images

* 2014-05-19 - thorben.betten@open-xchange.com

 - Fix for bug 32481: Ignore requests to LinkedIn JSON API if no LinkedIn OAuth account is available for associated user

* 2014-05-14 - thorben.betten@open-xchange.com

 - Fix for bug 32519: Fixed parsing JSON in case JSON NULL is set as value and fall-back to mail account credentials if transport ones seems to be "not set"

* 2014-05-13 - thorben.betten@open-xchange.com

 - Fix for bug 32226: Do not specify any cache-controlling HTTP header for "file" HTTP-API module

* 2014-05-12 - thorben.betten@open-xchange.com

 - Fix for bug 30843: Introduced properties for IMAP, POP3, and SMTP to specify the SSL cipher suites that will be enabled for SSL connections
 - Fix for bug 32466: Ignore transport credentials on primary mail account update
 
* 2014-05-09 - thorben.betten@open-xchange.com

 - Fix for bug 32017: Keep subfolder information intact for "Public files" (15) folder

* 2014-05-08 - ioannis.chouklis@open-xchange.com

 - Fix for bug 32396 - Introduced a new servlet parameter 'disable-address-updates' which prevents the webservices' URL manipulation

* 2014-05-07 - martin.schneider@open-xchange.com

 - Fix for bug 32263: Set transport password instead of IMAP password for account update

* 2014-05-07 - ioannis.chouklis@open-xchange.com

 -Fix for bug 31253: Escape the 'OK' literal at the beginning of each newline with '_OK_'

* 2014-05-05 - lars.hoogestraat@open-xchange.com

 - Fix for bug 32250: Changed yahoo api access to https further added error message on receiving invalid response

* 2014-05-05 - tobias.friedrich@open-xchange.com
