@@ -36,6 +36,9 @@ Import-Package: com.google.common.net,
  javax.servlet,
  javax.servlet.http,
  javax.servlet.resources,
+ org.apache.commons.codec,
+ org.apache.commons.codec.binary,
+ org.apache.commons.codec.net,
  org.apache.commons.logging,
  org.osgi.framework,
  org.osgi.service.http,
